fixing footer spacing for services

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -55,6 +55,24 @@
   position: absolute;
 }
 
+.bg-image-training {
+  width: 100%;
+  height: auto;
+  padding: 50px 0;
+  position: relative;
+  background: url(../img/sliders/training.jpg) repeat fixed;
+  background-size: cover;
+}
+
+.bg-image-training:before {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  content: " ";
+  position: absolute;
+}
+
 .parallaxBg h1 {
   color: #fff;
   font-size: 70px;
